# shopybot

./: .gitignore  README.md  pyproject.toml  run.py
app/: admin.py  handlers.py  keyboards.py
app/database/: models.py  requests.py
src/: __main__.py  config_reader.py
src/bot/callbacks/: __init__.py  shop.py
src/bot/handlers/: __init__.py  admin.py  start.py
src/bot/keyboards/: __init__.py  builders.py  factories.py  inline.py
src/bot/middlewares/: __init__.py  db_session.py
src/db/: __init__.py  base.py  models.py
